tests/ui/stability-attribute/soft-unstable.none.stderr
error: use of unstable library features `a` and `b`
  --> $DIR/soft-unstable.rs:11:5
   |
LL |     soft_unstable::mac!();
   |     ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #64266 <https://github.com/rust-lang/rust/issues/64266>
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information about `a`
   = note: reason for `b`: reason b
   = note: see issue #2 <https://github.com/rust-lang/rust/issues/2> for more information
   = help: add `#![feature(a, b)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: `#[deny(soft_unstable)]` on by default

error: use of unstable library features `c` and `d`
  --> $DIR/soft-unstable.rs:14:5
   |
LL |     soft_unstable::something();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #64266 <https://github.com/rust-lang/rust/issues/64266>
   = note: see issue #3 <https://github.com/rust-lang/rust/issues/3> for more information about `c`
   = note: reason for `d`: reason d
   = note: see issue #4 <https://github.com/rust-lang/rust/issues/4> for more information
   = help: add `#![feature(c, d)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

Future incompatibility report: Future breakage diagnostic:
error: use of unstable library features `a` and `b`
  --> $DIR/soft-unstable.rs:11:5
   |
LL |     soft_unstable::mac!();
   |     ^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #64266 <https://github.com/rust-lang/rust/issues/64266>
   = note: see issue #1 <https://github.com/rust-lang/rust/issues/1> for more information about `a`
   = note: reason for `b`: reason b
   = note: see issue #2 <https://github.com/rust-lang/rust/issues/2> for more information
   = help: add `#![feature(a, b)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: `#[deny(soft_unstable)]` on by default

Future breakage diagnostic:
error: use of unstable library features `c` and `d`
  --> $DIR/soft-unstable.rs:14:5
   |
LL |     soft_unstable::something();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #64266 <https://github.com/rust-lang/rust/issues/64266>
   = note: see issue #3 <https://github.com/rust-lang/rust/issues/3> for more information about `c`
   = note: reason for `d`: reason d
   = note: see issue #4 <https://github.com/rust-lang/rust/issues/4> for more information
   = help: add `#![feature(c, d)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: `#[deny(soft_unstable)]` on by default

